# FEUP-AEDA-Proj1

./: .clang-format  .gitignore  111  123  AEDA_-_Cartao_Museus_de_Portugal_parte_2.pptx  AEDA_-_Cartao_Museus_de_Portugal_parte_2_2.pptx  AEDA_proj1.drawio  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  config.mk  config.sadjson  eg_network_options.sadjson  main.cpp  museus.cpp  networkoptions.sadjson  utilities.cpp
AEDA1920_Turma3_G8/: apresentacao.pptx
AEDA1920_Turma3_G8/codigo/: main.cpp
AEDA1920_Turma3_G8/documentacao/: annotated.html  classAddress.html  classAddress__coll__graph.map  classAdminInterface__coll__graph.map  classAdminInterface__coll__graph.md5  classDate.html  classEnterprise__coll__graph.map  classEvent.html  classEvent__coll__graph.map  classFileNotFound.html  classMemberInterface.html  classMemberInterface__coll__graph.md5  classMenu.html  classMenuFilter.html  classMenuOptions.html  classMenuSelect.html  classMuseum.html  classMuseumNetwork.html  classMuseumNetwork__coll__graph.map  classNoSuchObject.html  classObjectAlreadyExists.html  classSilverCard.html  classSilverCard__inherit__graph.md5  classTime.html  classTime__coll__graph.map  classTooEarlyToRenewCard.html  classTooEarlyToRenewCard__coll__graph.md5  classUniCard__coll__graph.md5  classUniCard__inherit__graph.map  classUserInputReadingFailure.html  (+31 more)
AEDA1920_parte2_Turma3_G8/: apresentacao.pptx
a/: CMakeCache.txt  Doxyfile  FEUP-AEDA-Proj1  Makefile  cmake_install.cmake  compile_commands.json
docs/: Doxyfile
files/: 111_enterprises  111_files  cards.txt  eg_cards.txt  eg_enterprise.txt  eg_museum.txt  enterprises.txt  museums.txt
include/: address.h  cards.h  date.h  enterprise.h  event.h  exceptions.h  filter.h  interfaces.h  menu.h  museum.h  museum_network.h  repairenterprise.h  stateworker.h  time.h  utilities.h
src/: address.cpp  cards.cpp  date.cpp  enterprise.cpp  event.cpp  filter.cpp  interfaces.cpp  menu.cpp  museum.cpp  museum_network.cpp  repairenterprise.cpp  stateworker.cpp  time.cpp  utilities.cpp
tests/: test_card.cpp  test_card_cin.cpp  test_enterprise.cpp  test_event.cpp  test_interfaces.cpp  test_menu.cpp  test_museum.cpp  test_network.cpp  test_utilities.cpp
(+901 files in other folders)
